--- a/CoffeeShopIMS/Views/Supplier/Index.cshtml
+++ b/CoffeeShopIMS/Views/Supplier/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    ViewData["Title"] = "Supplier Management";
 }
 @model List<Supplier>
 
@@ -16,42 +17,72 @@
     <div class="row pt-2"></div>
 </div>
 
-@{
-    if (Model.Count == 0)
-    {
-        <div class="row pt-10">
-            <div class="text-center mx-auto pt-4">
-                <h1>You don't have any suppliers!</h1>
-            </div>
+@if (Model.Count == 0)
+{
+    <div class="row pt-10">
+        <div class="text-center mx-auto pt-4">
+            <h1>You don't have any suppliers!</h1>
         </div>
-    }
-    else
-    {
-        <div class="table-responsive">
-            <table class="table table-striped table-hover">
-                <thead>
+    </div>
+}
+else
+{
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var supplier in Model)
+                {
                     <tr>
-                        <th>Name</th>
-                        <th>Address</th>
-                        <th>Actions</th>
+                        <td>@supplier.Name</td>
+                        <td>@supplier.Address</td>
+                        <td>
+                            <a asp-controller="Supplier" asp-action="Edit" asp-route-id="@supplier.Id"
+                                class="btn btn-secondary btn-sm">Update</a>
+                            <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                data-id="@supplier.Id">Delete</button>
+                        </td>
+                        <div class="modal fade" id="deleteModal" tabindex=0 aria-hidden="true"
+                            aria-labelledby="deleteModalLabel">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="deleteModalLabel">Warning!</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are you sure want to remove supplier @supplier.Name?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a class="btn btn-primary" asp-controller="Supplier" asp-action="Delete">Confirm</a>
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </tr>
-                </thead>
-                <tbody>
-                    @{
-                        foreach (var supplier in Model) 
-                        {
-                            <tr>
-                                <td>@supplier.Name</td>
-                                <td>@supplier.Address</td>
-                                <td>
-                                    <a asp-controller="Supplier" asp-action="Edit" asp-route-id="@supplier.Id" class="btn btn-secondary">Update</a>
-                                    <a asp-controller="Supplier" asp-action="Delete" class="btn btn-danger">Delete</a>
-                                </td>
-                            </tr>
-                        }
-                    }
-                </tbody>
-            </table>
-        </div>
-    }
+                }
+            </tbody>
+        </table>
+    </div>
+}
+
+
+@section Scripts {
+    <script>
+        $(function () {
+            $(".btn-sm").on("click", function () {
+                const dataId = $(this).attr("data-id");
+                console.debug("Checking model's ID:", dataId);
+                $(".modal-footer a.btn.btn-primary").attr("href", `/Supplier/Delete/${dataId}`);
+            })
+        })
+    </script>
 }
