fix: Add SKU to Ingredient view

--- a/CoffeeShopIMS/Views/Ingredient/Index.cshtml
+++ b/CoffeeShopIMS/Views/Ingredient/Index.cshtml
@@ -27,6 +27,7 @@ else
             <thead>
                 <tr>
                     <th>Name</th>
+                    <th>SKU</th>
                     <th>Current amount</th>
                 </tr>
             </thead>
@@ -35,6 +36,7 @@ else
                 {
                     <tr>
                         <td>@ingredient.Name</td>
+                        <td>@ingredient.Sku</td>
                         <td>@ingredient.Quantity</td>
                     </tr>
                 }
