--- a/CoffeeShopIMS/Views/Order/Index.cshtml
+++ b/CoffeeShopIMS/Views/Order/Index.cshtml
@@ -6,12 +6,12 @@
 <div class="container">
     <div class="row pt-4">
         <div class="col-3 mx-auto pt-2 text-center">
-            <h2>Purchase Order History</h2>
+            <h2>Purchase Request History</h2>
         </div>
     </div>
     <div class="row pt-4">
         <div class="col-6">
-            <a class="btn btn-primary" asp-controller="Order" asp-action="Create">Make a purchase</a>
+            <a class="btn btn-primary" asp-controller="Order" asp-action="Create">Make a request</a>
         </div>
     </div>
     <div class="row pt-2"></div>
