--- a/CoffeeShopIMS/Views/Order/Create.cshtml
+++ b/CoffeeShopIMS/Views/Order/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@* @using CoffeeShopIMS.ViewModels *@
-@{
+﻿@{
     ViewData["Title"] = "Create Order";
 }
 @model CoffeeShopIMS.ViewModels.PurchaseRequestViewModel
@@ -19,7 +18,9 @@
                         </div>
                         <div class="form-group mb-3">
                             <label asp-for="VendorName" class="form-label">Vendor</label>
-                            <input type="text" asp-for="VendorName" class="form-control" placeholder="Enter a name">
+                            <select class="form-select form-select text-center" asp-items="@Model.Vendors" asp-for="VendorName">
+                                <option value="">--Select Vendor--</option>
+                            </select>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -31,7 +32,7 @@
                         <div class="form-group mb-3">
                             <label asp-for="CreationDate" class="form-label">Order creation date</label>
                             <input type="date" class="form-control" asp-for="CreationDate"
-                                value="@DateTime.Now.ToString("yyyy-MM-dd")" disabled>
+                                value="@DateTime.Now.ToString("yyyy-MM-dd")" readonly>
                         </div>
                     </div>
                 </div>
@@ -53,12 +54,20 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="text" class="form-control-sm form-control" name="ingredientName"
-                                placeholder=""></td>
-                        <td><input type="number" class="form-control-sm form-control" name="ingredientQuantity"
-                                value="1"></td>
-                        <td><input type="text" class="form-control-sm form-control" name="ingredientUnit"
-                                placeholder=""></td>
+                        <td>
+                            <select class="form-select form-select-sm text-center" asp-items="@Model.Ingredients"
+                                name="ingredientName">
+                                <option value="">--Select Ingredient--</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input type="number" class="form-control-sm form-control text-center"
+                                name="ingredientQuantity" value="1">
+                        </td>
+                        <td>
+                            <input type="text" class="form-control-sm form-control text-center" name="ingredientUnit"
+                                placeholder="">
+                        </td>
                         <td>
                             <button type="button" id="addIngredientBtn" class="btn btn-success btn-sm">Add</button>
                         </td>
@@ -73,10 +82,14 @@
     <script>
         $(function () {
             $('#addIngredientBtn').click(function () {
-                var index = $('table tbody tr').length - 1;
-                var name = $('input[name="ingredientName"]').val();
-                var quantity = $('input[name="ingredientQuantity"]').val();
-                var unit = $('input[name="ingredientUnit"]').val();
+                let index = $('table tbody tr').length - 1;
+                let name = $('select[name="ingredientName"]').find(':selected').text();
+                let quantity = $('input[name="ingredientQuantity"]').val();
+                let unit = $('input[name="ingredientUnit"]').val();
+
+                if (name.indexOf('Select Ingredient') !== -1) {
+                    return;
+                }
 
                 if (isIngredientExistInTable(name)) {
                     addIngredientExistingRow(name, quantity);
@@ -84,7 +97,7 @@
                     addIngredientNewRow(index, name, quantity, unit);
                 }
 
-                $('input[name="ingredientName"]').val('');
+                $('select[name="ingredientName"]').val('');
                 $('input[name="ingredientQuantity"]').val(1);
                 $('input[name="ingredientUnit"]').val('');
             });
@@ -106,7 +119,7 @@
             const rows = $('tbody tr');
 
             for (let rowIndex = 1; rowIndex < rows.length; rowIndex++) {
-                $(rows[rowIndex]).find('input[name^="Ingredients"]').each(function () {
+                $(rows[rowIndex]).find('input[name^="OrderedIngredients"]').each(function () {
                     let nameAttr = $(this).attr('name');
                     $(this).attr('name', nameAttr.replace(/\[\d+\]/g, `[${rowIndex - previousRowIndex}]`));
                 });
@@ -116,7 +129,7 @@
 
         function isIngredientExistInTable(name) {
             let exists = false;
-            $('tbody tr input[name^="Ingredients"]').each(function () {
+            $('tbody tr input[name^="OrderedIngredients"]').each(function () {
                 if ($(this).val() === name) {
                     exists = true;
                     return;
@@ -127,21 +140,21 @@
 
         function addIngredientNewRow(rowIndex, name, quantity, unit) {
             let newRow = `
-                        <tr>
-                            <td>
-                                <input type="text" name="Ingredients[${rowIndex}].Name" class="form-control-sm form-control" value="${name}">
-                            </td>
-                            <td>
-                                <input type="number" name="Ingredients[${rowIndex}].Quantity" class="form-control-sm form-control" value="${quantity}">
-                            </td>
-                            <td>
-                                <input type="text" name="Ingredients[${rowIndex}].Unit" class="form-control-sm form-control" value="${unit}">
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-danger btn-sm bg-danger delete-ingredient-btn">Discard</button>
-                            </td>
-                        </tr>
-                    `;
+                                <tr>
+                                    <td>
+                                        <input type="text" name="OrderedIngredients[${rowIndex}].Name" class="form-control-sm form-control text-center" value="${name}" readonly>
+                                    </td>
+                                    <td>
+                                        <input type="number" name="OrderedIngredients[${rowIndex}].Quantity" class="form-control-sm form-control text-center" value="${quantity}" readonly>
+                                    </td>
+                                    <td>
+                                        <input type="text" name="OrderedIngredients[${rowIndex}].Unit" class="form-control-sm form-control text-center" value="${unit}" readonly>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger btn-sm bg-danger delete-ingredient-btn">Discard</button>
+                                    </td>
+                                </tr>
+                            `;
             $('table tbody').append(newRow);
         }
 
@@ -155,5 +168,26 @@
             });
         }
 
+        $(function () {
+            $('select[name="ingredientName"]').on('change', function () {
+                let selectedIngredient = $(this).find(':selected').text();
+
+                if (selectedIngredient.indexOf('Select Ingredient') !== -1) {
+                    $('input[name="ingredientUnit"]').val('');
+                    return;
+                }
+
+                $.ajax({
+                    type: "GET",
+                    url: `/Ingredient/GetIngredientUnit?ingredient=${selectedIngredient}`,
+                    success: (response) => {
+                        $('input[name="ingredientUnit"]').val(response);
+                    },
+                    error: (error) => {
+                        console.log(`Error: ${error}`);
+                    }
+                })
+            })
+        })
     </script>
 }
